style.css
html {
  height: 100%;
  width: 100%;
  margin:100px;
}

body {
  background-color: #cfe3d5;
  color: #11752d;
  font-family:'Gill Sans MT', 'Gill Sans', 'Gill Sans', 'Gill Sans', sans-serif;
  font-size: large;
}

.button {
  padding: 10px;
  font-size: medium; 
  margin: 10px auto 50px;
  text-align: center;
  width: 100px;
  color: #11752d;
  background-color: darkseagreen;
  text-decoration: none;
}

h2 {
  background-color: #cfe3d5;
  color: #11752d;
  font-family:'Gill Sans MT', 'Gill Sans', 'Gill Sans', 'Gill Sans', sans-serif;
  font-size: large;
}

questions {
  margin: 30px;
}

